Unity type system changes

--- a/intervals/todo.txt
+++ b/intervals/todo.txt
@@ -1,146 +1,4 @@
 Run for a week
 
-Programmer
-  Programming is rather slow
-    Use calibration code to test speed of delay loops
-  Write back backup OSCCAL to PIC (0xC24)
-
-Buy connectors and resistors
-
-When the hardware doesn't work:
-  Get something simpler working
-  Run timing tests (make sure MOVWF PCL takes one cycle)
-
-
-
-Time 636.309927, Stream 735756 is good: 00011011 00011100 00001011 00001101 00001001 00011100 00011110 00011110 00001111 00001101 00001111 00011011 00001101 00001100 00001110 00001101 00011011 00001101 00011011 00001101 00001010 00001001 00011111 00011001 00011110 00001001 00011110 00001110 00001101 00011011 00011111 00001110 00001110 00011011 00001001 00011110 00001111 00001110 00001001 00011111 00011010 00001011 00001001 00001100 00011010 00011010 00011001 00011011 00011110 00001011 00011011 00001110 00011110 00001000 00011111 00011010 00011110 00001101 00001001 00001111 00011110 00011111 00011111 00011111 00011111 00001110 00001010 00001111 00011111 00001111 00001010 00001101 00011011 00001111 00001101 00011010 00011110 00011111 00011110 00011001 00011111 00001111 00011100 00001111 00011101 00011111 00001111 00001111 00001111 00001111 00011111
-Time 636.309927, Configuration 33253 settled in 20765.336885
-Configuration 33254, time 636.320710: Disconnecting bar 52 direction 0 from bar 91 direction 2. Live 92 connections 108
-000: ---/- ---/- 021/3 ---/-
-  021: 082/1 ---/- 047/3 000/2
-    082: 074/1 021/0 ---/- 050/2
-      050: 078/1 100/3 082/3 085/2
-        085: 015/2 064/3 050/3 ---/-
-          015: 007/1 ---/- 085/0 023/1
-            023: 008/2 015/3 ---/- 100/1
-              100: 017/1 023/3 ---/- 050/1
-                017: 084/2 100/0 ---/- ---/-
-                  084: ---/- ---/- 017/0 ---/-
-              008: 041/2 ---/- 023/0 ---/-
-                041: ---/- ---/- 008/0 ---/-
-            007: 068/1 015/0 064/0 ---/-
-              064: 007/2 ---/- 054/0 085/1
-                054: 064/2 ---/- 040/0 027/2
-                  040: 054/2 ---/- ---/- 089/2
-                    089: 083/1 080/3 040/3 ---/-
-                      083: ---/- 089/0 042/0 ---/-
-                        042: 083/2 ---/- 087/3 034/1
-                          087: 019/2 018/0 ---/- 042/2
-                            019: 075/2 ---/- 087/0 ---/-
-                              075: 053/2 010/0 019/0 094/2
-                                094: 063/1 ---/- 075/3 018/1
-                                  018: 087/1 094/3 ---/- ---/-
-                                  063: ---/- 094/0 096/3 047/2
-                                    096: ---/- ---/- 056/0 063/2
-                                      056: 096/2 003/3 078/0 057/2
-                                        003: ---/- ---/- 043/0 056/1
-                                          043: 003/2 ---/- ---/- 059/2
-                                            059: 028/1 ---/- 043/3 ---/-
-                                              028: ---/- 059/0 099/3 ---/-
-                                                099: ---/- ---/- ---/- 028/2
-                                        078: 056/2 050/0 ---/- 009/2
-                                          009: ---/- 026/3 078/3 ---/-
-                                            026: 020/2 081/0 013/0 009/1
-                                              020: 046/2 011/0 026/0 079/1
-                                                079: 081/2 020/3 ---/- ---/-
-                                                  081: 026/1 ---/- 079/0 ---/-
-                                                046: ---/- 060/0 020/0 ---/-
-                                                  060: 046/1 048/3 066/3 ---/-
-                                                    048: ---/- ---/- ---/- 060/1
-                                                    066: 067/2 ---/- 006/0 060/2
-                                                      067: ---/- ---/- 066/0 055/2
-                                                        055: 004/1 088/3 067/3 029/2
-                                                          029: 077/1 053/0 055/3 ---/-
-                                                            077: 070/2 029/0 093/3 ---/-
-                                                              093: 097/1 ---/- 024/0 077/2
-                                                                097: ---/- 093/0 058/3 002/1
-                                                                  058: 080/1 ---/- ---/- 097/2
-                                                                    080: 071/2 058/0 ---/- 089/1
-                                                                      071: ---/- ---/- 080/0 061/1
-                                                                        061: ---/- 071/3 039/0 ---/-
-                                                                          039: 061/2 ---/- ---/- 098/1
-                                                                            098: 001/2 039/3 ---/- ---/-
-                                                                              001: 069/1 057/3 098/0 037/1
-                                                                                037: ---/- 001/3 ---/- ---/-
-                                                                                069: 095/1 001/0 030/3 ---/-
-                                                                                  030: ---/- ---/- 091/0 069/2
-->                                                                                  091: 030/2 ---/- ---/- ---/-
-                                                                                  095: ---/- 069/0 ---/- ---/-
-                                                                                057: ---/- ---/- 056/3 001/1
-                                                                  002: ---/- 097/3 ---/- ---/-
-                                                                024: 093/2 ---/- ---/- 011/2
-                                                                  011: 020/1 031/3 024/3 049/2
-                                                                    049: ---/- ---/- 011/3 ---/-
-                                                                    031: ---/- ---/- ---/- 011/1
-                                                              070: ---/- ---/- 077/0 ---/-
-                                                            053: 029/1 005/0 075/0 025/2
-                                                              005: 053/1 ---/- 068/3 ---/-
-                                                                068: 038/2 007/0 ---/- 005/2
-                                                                  038: ---/- ---/- 068/0 ---/-
-                                                              025: 088/1 ---/- 053/3 ---/-
-                                                                088: 090/1 025/0 051/3 055/1
-                                                                  051: ---/- ---/- 036/3 088/2
-                                                                    036: ---/- ---/- ---/- 051/2
-                                                                  090: 032/1 088/0 ---/- ---/-
-                                                                    032: ---/- 090/0 045/3 065/2
-                                                                      045: ---/- ---/- ---/- 032/2
-                                                                      065: ---/- ---/- 032/3 ---/-
-                                                          004: 013/1 055/0 ---/- 016/2
-                                                            016: ---/- ---/- 004/3 ---/-
-                                                            013: 026/2 004/0 ---/- 076/1
-                                                              076: ---/- 013/3 ---/- ---/-
-                                                      006: 066/2 ---/- ---/- ---/-
-                                    047: ---/- ---/- 063/3 021/2
-                                010: 075/1 ---/- ---/- ---/-
-                          034: ---/- 042/3 033/3 052/2
-                            033: ---/- ---/- ---/- 034/2
-->                          052: ---/- 035/0 034/3 ---/-
-                              035: 052/1 ---/- ---/- ---/-
-                  027: ---/- ---/- 054/3 ---/-
-      074: ---/- 082/0 ---/- ---/-
-
-                                                                            098: 001/2 039/3 ---/- ---/-
-                                                                              001: 069/1 057/3 098/0 037/1
-                                                                                037: ---/- 001/3 ---/- ---/-
-                                                                                069: 095/1 001/0 030/3 ---/-
-                                                                                  030: ---/- ---/- 091/0 069/2
-                                                                                    091: 030/2 ---/- ---/- ---/-
-                                                                                  095: ---/- 069/0 ---/- ---/-
-                                                                                057: ---/- ---/- 056/3 001/1
-
-57 should be 1's child.
-
-98/0 primes 1/2.
-1/3 primes 37/1.
-1/0 primes 69/1
-  69/2 primes 30/3
-    30/2 primes 91/0
-  69/0 primes 95/1
-1/1 primes 57/3
-
-57/2 got primed by rogue 56/3
-
-
-1/1 tries to prime 57/3 as 57/3 tries to prime 1/1.
-  57/3 thinks prime was successful (but 1/1 disagrees)
-  1/1 thinks 57/3 was unresponsive.
-57/0 primes and fails.
-57/1 primes and fails.
-1/2 waits for sync.
-57/2 waits for sync.
-1/2 receives sync, sends data and resets.
-1/1 isn't confused by 57/3's "wait for data request"
-1/2 receives prime.
-1/1 attempts to prime 57/3.
-  1/1 thinks prime was successful (mistakes "wait for data request" for "prime pending")
+Buy resistors
 
