--- a/Unity/todo.txt
+++ b/Unity/todo.txt
@@ -1,4 +1,4 @@
-Separate get() from advance() in CharacterSource
+Fix incorrect DoubleQuotedString parsing?
 Error handling in FunctionName::addOverload()
 Error handling in FunctionName::lookUpOverload()
 Error handling in FunctionName::type()
