--- a/Unity/todo.txt
+++ b/Unity/todo.txt
@@ -98,14 +98,22 @@ Optimization: Shrink Symbol::_labelled if the second half is all empty to avoid 
   To do this, need to remove elements from the list when they're at the end of the array.
 Make Symbol::toString() do pretty indenting
   Where do we leave the "cursor"?
+    ownLine == false: at the place where a small token would be inserted
+    ownLine == true: at the beginning of the line
+  What does indent mean?
+    
   Rules:
     1) Don't split a IntegerSymbolEntry, a StringSymbolEntry, a label or an Atom.
     2) Don't put anything else on the same line as a partial SymbolEntry.
     3) Indent by two spaces for each Symbol or SymbolList we're inside.
     4) Don't put any characters past the 79th column unless we need to to avoid breaking the preceding rules.
-  if (not the only thing on the line && fits on the line) {
-      output in line
-      return;
+  if (not the only thing on the line)
+      if (fits on the line) {
+          output in line
+          return;
+      }
+      else
+          output new line
   }
   if (fits entirely on the line)
       output as single line
